@startuml
namespace CollegeLMS.API {
  interface IUserService {
    + GetAllAsync(ct) : Result<List<UserResponse>>
    + GetByIdAsync(id, ct) : Result<UserResponse>
    + CreateAsync(request, ct) : Result<UserResponse>
    + UpdateAsync(id, request, ct) : Result<UserResponse>
    + DeleteAsync(id, ct) : Result
    + ChangeRoleAsync(id, request, ct) : Result<UserResponse>
  }

  interface IAuthService {
    + LoginAsync(request, ct) : Result<LoginResponse>
    + GetProfileAsync(userId, ct) : Result<UserResponse>
  }

  class UserService {
    - db : AppDbContext
    + GetAllAsync(ct)
    + GetByIdAsync(id, ct)
    + CreateAsync(request, ct)
    + UpdateAsync(id, request, ct)
    + DeleteAsync(id, ct)
    + ChangeRoleAsync(id, request, ct)
  }

  class AuthService {
    - db : AppDbContext
    - tokenService : ITokenService
    + LoginAsync(request, ct)
    + GetProfileAsync(userId, ct)
  }

  class JwtTokenService {
    - config : IConfiguration
    + GenerateAccessToken(user) : string
  }

  UserService ..|> IUserService
  AuthService ..|> IAuthService
  JwtTokenService ..|> ITokenService
  UserService --> AppDbContext
  AuthService --> AppDbContext
  AuthService --> ITokenService
}

@enduml
